# stockar

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
stockar/: admin.py  apps.py  asgi.py  billing_customer.py  billing_product.py  billing_service.py  billing_service_error.py  billing_service_impl.py  billing_service_in_memory.py  forms.py  models.py  settings.py  signals.py  singleton.py  test_billing_service_impl.py  test_customer.py  tests_storage_offer.py  urls.py  views.py  wsgi.py
stockar/migrations/: 0001_initial.py  0002_account_stripe_customer_id.py  0002_storageoffer.py  0003_alter_storageoffer_id.py  0003_storagespace.py  0004_storageoffer_monthly_price.py
stockar/static/css/: alox-bs.css  style.css
stockar/templates/: base.html  index.html  login.html  offers.html  signup.html
