[tool.poetry]
name = "stockar"
version = "0.1.0"
description = ""
authors = ["Yoann Boj <yoann.boj@thalesdigital.io>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
